Made changes to instructions and corresponding UI elements

--- a/3/instructions.html
+++ b/3/instructions.html
@@ -6,15 +6,14 @@
 
 <body>
 
-<p>In this task, you will use our search engine on the top of the screen to identify the two most important features of a [PRODUCT TYPE AND USE]. Write a sentence in the [ETHERPAD/FORM] on the right side of the screen describing the feature you choose and another sentence explaining why the feature is important. Please do not use any other search engines or open up new tabs. When you are done creating your feature descriptions, click the "submit" button at the bottom of the screen.</p>
+<p>We are creating product review templates. Your task is to identify and describe the two most important features to consider when buying a recreational drone that can carry a high definition camera. We will be selecting some of the feature descriptions from these HITs to include in our product review template. Other Turkers will be rating your descriptions based on 1) how important the features are to someone looking to buy this product and 2) how easy it is to understand your descriptions of the features. Each description rated in the top 50% of submissions will receive a bonus payment.</p>
 
-<p>Clicking "submit" will send your description and saved search history on for evaluation (you will have the opportunity to edit your search history before it is sent).</p>
+<p>In this task, you will use our search engine on the top of the screen to help you figure out which two features are the most important. For each of the two features, write a sentence in the textbox on the right side of the screen clearly describing the feature and another sentence explaining why the feature is important. Please do not use any other search engines or open up new browser windows. When you are done creating your feature descriptions, click the button at the bottom of the screen.</p>
 
-<p>After clicking "submit" you will be asked to complete a short survey.</p>
+<p>Clicking "Submit Descriptions" will save your descriptions and bring up another screen. On that screen you will have the opportunity to edit your search history. Then you will send your descriptions and edited search history on to other Turkers for evaluation.</p>
 
-<p>We are creating product review templates. We will be selecting some of the feature descriptions from these HITs to include in our product review template.<p/>
+<p>Then take a short survey to complete your task.<p/>
 
-<p>[Another Turker] will evaluate your description text against [criteria, e.g., well-written, well-justified], and will also have your saved search history. If the other Turkers rate yours as one of the top 50%, you will receive a bonus payment of [2x/3x?].</p>  
 
 
 </body>
