--- a/3/index.html
+++ b/3/index.html
@@ -61,13 +61,13 @@
             </div>
 
             <div class="col-xs-6">
-                <h2>Etherpad (Your Description)</h2>
+                <h2>Write Descriptions in this Box</h2>
                 <iframe id='etherpad-lite' name ='embed_readwrite' width='100%' height=600></iframe>
             </div>
         </div>
     </div>
             
-    <button id="submit">Submit</button>
+    <button id="submit">Submit Descriptions</button>
 
 </body>
 </html>
