--- a/3/index.html
+++ b/3/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <form>
-            <img src="search.jpg" style="display: block; margin-left: auto; margin-right: auto"/>
+            <img src="search.png" style="display: block; margin-left: auto; margin-right: auto"/>
             <div class="form-group" style="width:55%; margin: 0 auto">
                 <textarea class="form-control status-box" rows="1" placeholder="Enter your search terms here"></textarea>
             </div>
