--- a/2/index.html
+++ b/2/index.html
@@ -36,7 +36,7 @@
         <div class="row">
 
             <div class="col-xs-4">
-                <h2>Search Results</h2>
+                <h2 style="padding-left: 20px;">Search Results</h2>
 		        <div id="nav">
                     <table class="navTable" style="width:100%">
                         <tr>
@@ -62,7 +62,7 @@
 
             <div class="col-xs-6">
                 <h2>Write Descriptions in this Box</h2>
-                <iframe id='etherpad-lite' name ='embed_readwrite' width='100%' height=600></iframe>
+                <iframe id='etherpad-lite' name ='embed_readwrite' width='100%' height=550></iframe>
             </div>
         </div>
     </div>
