--- a/3/index.html
+++ b/3/index.html
@@ -36,7 +36,7 @@
         <div class="row">
 
             <div class="col-xs-4">
-                <h2>Search Results</h2>
+                <h2 style="padding-left: 20px;">Search Results</h2>
 		        <div id="nav">
                     <table class="navTable" style="width:100%">
                         <tr>
@@ -51,7 +51,7 @@
             </div>
  
             <div class="col-xs-2">
-                <h3>Unedited History</h3>
+                <h3>History</h3>
                 <div id="history">
                     <ol>
 
@@ -62,12 +62,12 @@
 
             <div class="col-xs-6">
                 <h2>Write Descriptions in this Box</h2>
-                <iframe id='etherpad-lite' name ='embed_readwrite' width='100%' height=600></iframe>
+                <iframe id='etherpad-lite' name ='embed_readwrite' width='100%' height=550></iframe>
             </div>
         </div>
     </div>
             
-    <button id="submit">Submit Descriptions</button>
+    <button id="submit">Submit Descriptions and Search History</button>
 
 </body>
 </html>
