--- a/3/index.html
+++ b/3/index.html
@@ -67,7 +67,7 @@
         </div>
     </div>
             
-    <button id="submit">Submit Descriptions and Search History</button>
+    <button id="submit">Submit Descriptions</button>
 
 </body>
 </html>
