Updated instructions, button colors, and message box text

--- a/3/index.html
+++ b/3/index.html
@@ -51,7 +51,7 @@
             </div>
  
             <div class="col-xs-2">
-                <h3>History</h3>
+                <h2>Unedited History</h2>
                 <div id="history">
                     <ol>
 
@@ -67,7 +67,7 @@
         </div>
     </div>
             
-    <button id="submit">Submit Descriptions</button>
+    <button id="submit">Submit Descriptions and Proceed to Search History Editing</button>
 
 </body>
 </html>
