--- a/3/instructions.html
+++ b/3/instructions.html
@@ -6,13 +6,21 @@
 
 <body>
 
-<p>We are creating product review templates. Your task is to identify and describe the two most important features to consider when buying a recreational drone that can carry a high definition camera. We will be selecting some of the feature descriptions from these HITs to include in our product review template. Other Turkers will be rating your descriptions based on 1) how important the features are to someone looking to buy this product and 2) how easy it is to understand your descriptions of the features. Each description rated in the top 50% of submissions will receive a bonus payment.</p>
+<h2>Task Overview</h2>
+<p>We are creating product review templates highlighting important features of different products (e.g. noise is an important feature of an oscillating fan). Your task is to identify and describe the two most important non-photography related features people should consider when buying a <b>recreational drone</b>. </p>
 
-<p>In this task, you will use our search engine on the top of the screen to help you figure out which two features are the most important. For each of the two features, write a sentence in the textbox on the right side of the screen clearly describing the feature and another sentence explaining why the feature is important. Please do not use any other search engines or open up new browser windows. When you are done creating your feature descriptions, click the button at the bottom of the screen.</p>
+<h2>Use Our Search Engine</h2>
+<p>In this task, please use our search engine on the top of the screen to help you figure out which two features are the most important. Please do not use any other search engines or open up new browser windows. </p>
 
-<p>Clicking "Submit Descriptions" will save your descriptions and bring up another screen. On that screen you will have the opportunity to edit your search history. Then you will send your descriptions and edited search history on to other Turkers for evaluation.</p>
+<h2>Write Two Feature Descriptions</h2>
+<p>Use the writing description box on the right side of the screen to create your two feature descriptions based on your searches. For each feature you select, write one sentence describing the feature, and one sentence explaining why it's important. When you are done creating your feature descriptions, click the button at the bottom of the screen.</p>
 
-<p>Then take a short survey to complete your task.<p/>
+<h2>Evaluation</h2>
+<p>We will be selecting some of the feature descriptions from these HITs to include in our product review template. Other Turkers will be rating your descriptions based on 1) how important the features are to someone looking to buy this product and 2) how easy it is to understand your descriptions of the features. Each description rated in the top 50% of submissions will receive a bonus payment.</p>
+
+<h2>Finishing the Task</h2>
+<p>Click "Submit Descriptions and Proceed to Search History Editing" to save your descriptions and bring up another screen. On that screen you will have the opportunity to edit your search history. Then you will send your descriptions and edited search history on to other Turkers for evaluation.</p>
+<p>After you submit your work, take a short survey to finish the task.<p/>
 
 
 
