Added small print on condition 3

--- a/3/index.html
+++ b/3/index.html
@@ -51,13 +51,14 @@
             </div>
  
             <div class="col-xs-2">
-                <h2>Unedited History</h2>
+                <h2>Unedited History*</h2>
                 <div id="history">
                     <ol>
 
 
                     </ol>
                 </div>
+                <span style="font-size: 12px;">*You will have a chance to edit this.</span>
             </div>
 
             <div class="col-xs-6">
