--- a/3/instructions.html
+++ b/3/instructions.html
@@ -4,7 +4,7 @@
     <title>Instructions</title>
 </head>
 
-<body>
+<body style="font-family: Arial, sans-serif;">
 
 <h2>Task Overview</h2>
 <p>We are creating product review templates highlighting important features of different products (e.g. noise is an important feature of an oscillating fan). Your task is to identify and describe the two most important non-photography related features people should consider when buying a <b>recreational drone</b>. </p>
