Changed colors on button in consent form

--- a/consent_form.html
+++ b/consent_form.html
@@ -94,7 +94,7 @@ function continueToStudy() {
                 I want to participate in this research and continue with the HIT.&nbsp;&nbsp; <input type="radio" onclick="yesNoParticipateCheck();" name="yesNoParticipate" id="yesParticipateCheck"> Yes&nbsp;&nbsp;<input type="radio" onclick="yesNoParticipateCheck();" name="yesNoParticipate" id="noParticipateCheck"> No
             </div>
             <div id = "button" style="display: none">
-                <button style="border-radius: 5px; background-color: black; color: white; display: block; margin: 0 auto;" onclick="continueToStudy()">Continue</button>
+                <button style="border-radius: 5px; background-color: white; color: #4d4d4d; display: block; margin: 0 auto;" onclick="continueToStudy()">Continue</button>
             </div>
         </div>
     </div>
