--- a/consent_form.html
+++ b/consent_form.html
@@ -45,6 +45,7 @@ function yesNoAgeCheck() {
     else {
         document.getElementById('ifAge').style.display = 'none';
         document.getElementById('ifUnderstand').style.display = 'none';
+        document.getElementById('button').style.display = 'none';
     }
 
 }
@@ -55,6 +56,7 @@ function yesNoUnderstandCheck() {
     }
     else {
         document.getElementById('ifUnderstand').style.display = 'none';
+        document.getElementById('button').style.display = 'none';
     }
 
 }
@@ -64,6 +66,8 @@ function yesNoParticipateCheck() {
     if (document.getElementById('yesParticipateCheck').checked) {
         document.getElementById('button').style.display = 'block';
     }
+    else
+        document.getElementById('button').style.display = 'none';
 }
 
 function getWorkerID() {
