--- a/consent_form_ratings.html
+++ b/consent_form_ratings.html
@@ -52,7 +52,7 @@
         }
 
         function continueToStudy() {
-            window.open("http://home.dev/voss-experiment/start.html?mturkworkerID=" + getWorkerID(), "_self");
+            window.open("http://home.dev/voss-experiment/display_descriptions.php?mturkworkerID=" + getWorkerID(), "_self");
         }
 
     </script>
